syntax = "proto3";

package test;

service TestService {

    rpc NoOp(EmptyMessage) returns (Person){}
}

service SecondTestService {
    rpc NoOp(EmptyMessage) returns (EmptyMessage){}    
}

message EmptyMessage {}
message Address {
    string address_line_1 = 1;
    string postcode = 2;
} 

message Person {
    string first_name = 1;
    uint32 year_of_birth = 2;
    Address address = 3;
}